--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         .container {
             max-width: 800px;
             margin: auto;
-            background-image: url('img/fondo.jpg');
+            background-image: url('IMG/fondo.jpg');
             background-size: cover; 
             background-position: center; 
             border-radius: 8px;
@@ -79,7 +79,7 @@
             </tr>
             <tr>
                 
-                <td colspan="3" rowspan="4"> <img src="img/logo.jpeg" width="580px" height="150px"> </td>
+                <td colspan="3" rowspan="4"> <img src="IMG/logo.jpeg" width="580px" height="150px"> </td>
                 <td><label for="numeroNota">NOTA DE VENTA N.:</label></td>
                 <tr><td colspan="1"><input type="text" id="numeroNota" class="form-control" placeholder="Número"></td></tr>
             </tr>
@@ -217,19 +217,19 @@
             let detalles = "";
             switch (select.value) {
                 case "P01":
-                    detalles = '<table><tr><td rowspan="3"><img src="img/prod1.jpg" width="120px"></td><td>Color: Midnight Black</td></tr><tr><td>Processor: Octa Core</td></tr><tr><td>Screen Size: 6.4 in</td></tr></table>';
+                    detalles = '<table><tr><td rowspan="3"><img src="IMG/prod1.jpg" width="120px"></td><td>Color: Midnight Black</td></tr><tr><td>Processor: Octa Core</td></tr><tr><td>Screen Size: 6.4 in</td></tr></table>';
                     break;
                 case "P02":
-                    detalles = '<table><tr><td rowspan="3"><img src="img/prod2.jpg" width="120px"></td><td>Color: Yellow</td></tr><tr><td>Processor: Intel i5</td></tr><tr><td>Screen Size: 14 in</td></tr></table>';
+                    detalles = '<table><tr><td rowspan="3"><img src="IMG/prod2.jpg" width="120px"></td><td>Color: Yellow</td></tr><tr><td>Processor: Intel i5</td></tr><tr><td>Screen Size: 14 in</td></tr></table>';
                     break;
                 case "P03":
-                    detalles = '<table><tr><td rowspan="3"><img src="img/prod3.jpg" width="120px"></td><td>Color: Silver</td></tr><tr><td>Processor: AMD Ryzen 7</td></tr><tr><td>Screen Size: 15.6 in</td></tr></table>';
+                    detalles = '<table><tr><td rowspan="3"><img src="IMG/prod3.jpg" width="120px"></td><td>Color: Silver</td></tr><tr><td>Processor: AMD Ryzen 7</td></tr><tr><td>Screen Size: 15.6 in</td></tr></table>';
                     break;
                 case "P04":
-                    detalles = '<table><tr><td rowspan="3"><img src="img/prod4.jpg" width="120px"></td><td>Color: Blue</td></tr><tr><td>Processor: Intel i7</td></tr><tr><td>Screen Size: 13.3 in</td></tr></table>';
+                    detalles = '<table><tr><td rowspan="3"><img src="IMG/prod4.jpg" width="120px"></td><td>Color: Blue</td></tr><tr><td>Processor: Intel i7</td></tr><tr><td>Screen Size: 13.3 in</td></tr></table>';
                     break;
                 case "P05":
-                    detalles = '<table><tr><td rowspan="3"><img src="img/prod5.jpg" width="120px"></td><td>Color: White</td></tr><tr><td>Processor: Apple M1</td></tr><tr><td>Screen Size: 12.9 in</td></tr></table>';
+                    detalles = '<table><tr><td rowspan="3"><img src="IMG/prod5.jpg" width="120px"></td><td>Color: White</td></tr><tr><td>Processor: Apple M1</td></tr><tr><td>Screen Size: 12.9 in</td></tr></table>';
                     break;
                 default:
                     detalles = "Seleccione un producto.";
